Added the beginning of tutorial

--- a/notebooks/IAA-John.ipynb
+++ b/notebooks/IAA-John.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bda30c7e-df45-4e2e-b63e-916da8f1ffe4",
    "metadata": {},
    "outputs": [],
@@ -140,10 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "20aaf660-1860-489a-a326-06347f7b78d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(utah, mississippi, lake city)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "doc2.ents"
    ]
@@ -375,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "9f8afd7e",
    "metadata": {},
    "outputs": [],
@@ -466,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "00a8e6a7-7116-405c-addd-b19e08a9fae6",
    "metadata": {},
    "outputs": [],
@@ -511,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "id": "650bc405-f61d-4287-ac88-14ed6072bebe",
    "metadata": {},
    "outputs": [],
@@ -544,10 +555,9 @@
     "            return\n",
     "    else:\n",
     "        #raise error\n",
-    "        print(\"Input must be of type 'tuples', 'spacy.tokens.span_group.SpanGroup', or 'spacy.tokens.doc.Doc'\")\n",
+    "        print(\"Error: Input must be of type 'tuples', 'spacy.tokens.span_group.SpanGroup', or 'spacy.tokens.doc.Doc'\")\n",
     "        return\n",
     "        \n",
-    "    \n",
     "    if loose:\n",
     "        doc1_matches, doc2_matches = overlaps(doc1_ents, doc2_ents, labels)\n",
     "    else:\n",
@@ -558,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "b01c45b1",
    "metadata": {},
    "outputs": [],
@@ -581,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "b609c982-0b94-4913-b23b-a672950bd99b",
    "metadata": {},
    "outputs": [],
@@ -594,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "c0b3a52c-8d6b-4a15-a7ae-5fc992f4564a",
    "metadata": {},
    "outputs": [],
@@ -609,15 +619,132 @@
     "        corpus_fp += fp\n",
     "        corpus_fn += fn\n",
     "    \n",
+    "    \n",
     "    return pairwise_f1(tp,fp,fn)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce5b5804",
+   "cell_type": "markdown",
+   "id": "f830f821",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1fdc230",
+   "metadata": {},
+   "source": [
+    "In this tutorial I will go over the basic, front-end usage of calculating IAA between 2 annotators."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "2b71c3b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doc1.ents:  (utah, mississippi)\n",
+      "doc2.ents:  (utah, mississippi, lake city)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp1 = spacy.load(\"en_core_web_sm\")\n",
+    "nlp2 = spacy.load(\"en_core_web_md\")\n",
+    "#!python -m spacy download en_core_web_sm\n",
+    "#!python -m spacy download en_core_web_md\n",
+    "\n",
+    "#Note for John: Get better examples or make my own entities\n",
+    "doc1 = nlp1(\"this is a test document made in utah or mississippi, or salt lake city.\")\n",
+    "doc2 = nlp2(\"this is a test document made in utah or mississippi, or salt lake city.\")\n",
+    "\n",
+    "print('doc1.ents: ',doc1.ents)\n",
+    "print('doc2.ents: ',doc2.ents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf67766",
+   "metadata": {},
+   "source": [
+    "Above we made two documents using spacy's NER packages. Document 2 added more entities than document 1. Let's calculate the IAA between these documents!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2da909d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus_agreement([doc1],[doc2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a8da40f",
+   "metadata": {},
+   "source": [
+    "'corpus_agreement' calculates the agreement between two lists of documents. Note the brackets around 'doc1' and 'doc2' so they are passed in as lists of size 1 each.\n",
+    "\n",
+    "'corpus_agreement' can also take options to be more flexible with other IAA methods. Below are the arguments:\n",
+    "\n",
+    "### corpus_agreement(docs1, docs2, loose=1, labels=1,ent_or_span='ent')\n",
+    "\n",
+    "docs1: list of spacy documents\n",
+    "\n",
+    "docs2: list of spacy documents with same order as docs1\n",
+    "\n",
+    "loose: Boolean for allowing loose matching. '1' indicates that any overlap between two spans/entities is counted towards IAA. '0' indicates that only exact matches will be allowed.\n",
+    "\n",
+    "labels: Boolean to include labels when matching. Uses the .label_ attribute of entities/spans to access labels.\n",
+    "\n",
+    "ent_or_span: string of whether spans or entities are being compared. If set to 'ent', code will iterate through doc1.ents and doc2.ents. If set to 'span', code will iterate through the spans within doc1 and doc2's first span group. 'span' only works if doc1 has one span group. This option may be extended to include doc._ .concepts option, or to allow multiple span groups to be compared."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0644cbe2",
+   "metadata": {},
+   "source": [
+    "Internally, corpus_agreement is calling the 'agreement' and 'pairwise_f1' functions on each pair of document in the lists. We can instead choose to call these functions separate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "44ad2c4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
