--- a/notebooks/IAA-John.ipynb
+++ b/notebooks/IAA-John.ipynb
@@ -963,9 +963,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:python3.8]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python3.8-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -977,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
