add new IO notebook for latest medspacy-io: eHost_annotation2dataframe_newMedspacy-io.ipynb

--- a/notebooks/eHost_annotation2dataframe_newMedspacy-io.ipynb
+++ b/notebooks/eHost_annotation2dataframe_newMedspacy-io.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c141c817-c7d5-4754-9923-1873a8ae2ba6",
+   "id": "4de8ebf3-c519-41ba-8125-5fe67993a8f0",
    "metadata": {},
    "source": [
-    "# EHost annotation to dataframe format for overlapped spans medspacy-io-0.1.0.dev34\n",
-    "In this notebook, we readin all the annotations from a folder and build dataframe for one annotator."
+    "# EHost annotation to dataframe format for overlapped spans latest Medspacy-io\n",
+    "\n",
+    "This notebook requires using latest Medspacy-io, you can install it by running:\n",
+    "`pip install git+https://github.com/medspacy/medspacy_io.git`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a3c169c5-fc37-40d3-bc39-80e5fcd18510",
+   "execution_count": 1,
+   "id": "efd0a8a0-78b0-44dc-9fcd-82ace6bf5dc2",
    "metadata": {},
    "outputs": [
     {
@@ -30,50 +32,176 @@
     "anno_dir = '../mimic_annotations/testEhostReaderData/saved/'\n",
     "\n",
     "doc_list = os.listdir(doc_dir)\n",
-    "print(len(doc_list),doc_list)\n"
+    "print(len(doc_list),doc_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "82c7c12f-8c3a-40c3-8ff0-e44a90932c14",
+   "execution_count": 2,
+   "id": "da12c218-ebe5-4386-9acc-4d1361f502a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "from spacy.lang.en import English\n",
     "from medspacy_io.reader import EhostDocReader\n",
     "from medspacy_io.reader import EhostDirReader\n",
-    "import pandas as pd\n",
-    "ereader = EhostDocReader(nlp=English(), schema_file=schema_file,support_overlap=True)"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "864918d1-d56e-4833-aa8a-64ede8c33851",
+   "metadata": {},
+   "source": [
+    "We can use the directory reader from the latest `medspacy-io`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2544aad0-9865-49e4-a9ad-86f0981de418",
+   "execution_count": 9,
+   "id": "a42baffe-30bc-4f17-9e85-ec6c00493b4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read in annotation\n",
+    "dir_reader = EhostDirReader(nlp=English(), support_overlap=True,recursive=True, schema_file=schema_file)\n",
+    "docs = dir_reader.read(txt_dir=doc_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2982bd65-d86b-4b29-9150-2cf34c166b24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Symptom']\n",
+      "485939.txt\n",
+      "['Symptom', 'SectionHeader_HasSymptom', 'Symptom_Section']\n",
+      "366026.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom_Section', 'Symptom']\n",
+      "5585.txt\n",
+      "['Symptom']\n",
+      "669731.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom']\n",
+      "33200.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "36609.txt\n",
+      "['Symptom']\n",
+      "335643.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "52374.txt\n",
+      "['Symptom']\n",
+      "38580.txt\n",
+      "['Doc_reviewed_no_symptoms']\n",
+      "601884.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom']\n",
+      "38757.txt\n",
+      "['Symptom']\n",
+      "416614.txt\n",
+      "['Symptom', 'SectionHeader_HasSymptom']\n",
+      "45725.txt\n",
+      "[]\n",
+      "56773.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom_Section', 'Symptom']\n",
+      "19070.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "628045.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom', 'Symptom_Section']\n",
+      "45509.txt\n",
+      "['Symptom']\n",
+      "527735.txt\n",
+      "[]\n",
+      "439912.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "457012.txt\n",
+      "['Symptom']\n",
+      "595179.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "575514.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom', 'Symptom_Section']\n",
+      "28056.txt\n",
+      "['Symptom']\n",
+      "655523.txt\n",
+      "['Doc_reviewed_no_symptoms', 'Symptom']\n",
+      "537108.txt\n",
+      "['Symptom']\n",
+      "33137.txt\n",
+      "['Symptom']\n",
+      "330814.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom', 'Symptom_Section']\n",
+      "18826.txt\n",
+      "['Doc_reviewed_no_symptoms']\n",
+      "700062.txt\n",
+      "['Symptom']\n",
+      "26272.txt\n",
+      "[]\n",
+      "321062.txt\n",
+      "['Symptom']\n",
+      "584041.txt\n",
+      "['Symptom']\n",
+      "369557.txt\n",
+      "['Symptom']\n",
+      "679566.txt\n",
+      "['Symptom']\n",
+      "593885.txt\n",
+      "['Symptom']\n",
+      "379.txt\n",
+      "['Symptom']\n",
+      "489228.txt\n",
+      "['Symptom', 'SectionHeader_HasSymptom', 'Symptom_Section']\n",
+      "24881.txt\n",
+      "['Symptom']\n",
+      "377554.txt\n",
+      "['Doc_reviewed_no_symptoms', 'Symptom']\n",
+      "700799.txt\n",
+      "['SectionHeader_HasSymptom', 'Symptom_Section', 'Symptom']\n",
+      "26388.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "330335.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "18305.txt\n",
+      "['Symptom']\n",
+      "375911.txt\n",
+      "['Symptom']\n",
+      "345622.txt\n",
+      "['Symptom']\n",
+      "346854.txt\n",
+      "['Symptom']\n",
+      "536291.txt\n",
+      "['Symptom']\n",
+      "456788.txt\n",
+      "['Symptom', 'Symptom_Section']\n",
+      "5749.txt\n",
+      "['Symptom']\n",
+      "3271.txt\n"
+     ]
+    }
+   ],
+   "source": [
     "data = []\n",
-    "for fn in doc_list:\n",
-    "    doc = ereader.read(doc_dir+fn)\n",
-    "    doc_concepts_dic = doc._.concepts\n",
-    "    for concept, listSpan in doc_concepts_dic.items():\n",
-    "        for sp in listSpan:\n",
+    "for doc in docs:\n",
+    "    doc_concepts_list = doc._.concepts #now it is a list to used as key to extract SpanGroup\n",
+    "    for concept in doc_concepts_list:\n",
+    "        for sp in doc.spans[concept]: # iterate spans in certain spanGroup\n",
     "            dicElem = {}\n",
     "            dicElem['Span Text'] = sp.text\n",
     "            dicElem['Concept Label'] = sp.label_\n",
     "            dicElem['start loc'] = sp.start_char\n",
     "            dicElem['end loc'] = sp.end_char\n",
-    "            dicElem['doc name'] = fn\n",
-    "            data.append(dicElem)\n"
+    "            dicElem['doc name'] = doc._.doc_name\n",
+    "            data.append(dicElem)\n",
+    "            \n",
+    "    print(doc_concepts_list)\n",
+    "    print(doc._.doc_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8614919b-9f44-4732-8517-4b47054b3676",
+   "execution_count": 14,
+   "id": "f9ecb751-7caf-48cd-a0ff-5e5a0f363bc9",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +356,7 @@
        "[567 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,18 +369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "36c15693-4044-480c-8ae0-7b806c1457cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_pickle(\"df_Mengke.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "d047335f-c241-4105-9f83-56514674a6bb",
+   "id": "057312cb-c41d-4626-942f-fd1d7f154ec6",
    "metadata": {},
    "outputs": [],
    "source": []
