Updated IAA segment of pipeline

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "92b742f0-643a-4976-9bb8-65612ad253bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema_file = '../mimic_annotations/testEhostReaderData/config/projectschema.xml'\n",
-    "doc_dir = '../mimic_annotations/testEhostReaderData/corpus/'\n",
-    "anno_dir = '../mimic_annotations/testEhostReaderData/saved/'"
+    "schema_file = 'C:/Users/johna/Desktop/work forms filled/Symptoms/Symptoms/config/projectschema.xml'\n",
+    "doc_dir = '/Users/johna/Desktop/work forms filled/Symptoms/Symptoms/corpus/'\n",
+    "anno_dir = '/Users/johna/Desktop/work forms filled/Symptoms/Symptoms/saved/'"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "9c188183-d20e-4df1-941c-da177a37a7c0",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50 ['485939.txt', '366026.txt', '5585.txt', '669731.txt', '33200.txt', '36609.txt', '335643.txt', '52374.txt', '38580.txt', '601884.txt', '38757.txt', '416614.txt', '45725.txt', '56773.txt', '19070.txt', '628045.txt', '45509.txt', '527735.txt', '439912.txt', '457012.txt', '595179.txt', '575514.txt', '28056.txt', '655523.txt', '537108.txt', '33137.txt', '330814.txt', '18826.txt', '700062.txt', '26272.txt', '321062.txt', '584041.txt', '369557.txt', '679566.txt', '593885.txt', '379.txt', '489228.txt', '24881.txt', '377554.txt', '700799.txt', '26388.txt', '330335.txt', '18305.txt', '375911.txt', '345622.txt', '346854.txt', '536291.txt', '456788.txt', '5749.txt', '3271.txt']\n"
+      "50 ['18305.txt', '18826.txt', '19070.txt', '24881.txt', '26272.txt', '26388.txt', '28056.txt', '321062.txt', '3271.txt', '330335.txt', '330814.txt', '33137.txt', '33200.txt', '335643.txt', '345622.txt', '346854.txt', '366026.txt', '36609.txt', '369557.txt', '375911.txt', '377554.txt', '379.txt', '38580.txt', '38757.txt', '416614.txt', '439912.txt', '45509.txt', '456788.txt', '457012.txt', '45725.txt', '485939.txt', '489228.txt', '52374.txt', '527735.txt', '536291.txt', '537108.txt', '5585.txt', '56773.txt', '5749.txt', '575514.txt', '584041.txt', '593885.txt', '595179.txt', '601884.txt', '628045.txt', '655523.txt', '669731.txt', '679566.txt', '700062.txt', '700799.txt']\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4c400ec5-2e1d-42b4-bea2-e46e806d9de2",
    "metadata": {},
    "outputs": [
@@ -123,43 +123,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>respiratory failure</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>103</td>\n",
-       "      <td>122</td>\n",
-       "      <td>485939.txt</td>\n",
+       "      <td>HISTORY OF PRESENT ILLNESS:  Ms. [**Known last...</td>\n",
+       "      <td>Symptom_Section</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2616</td>\n",
+       "      <td>18305.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>sepsis</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>1171</td>\n",
-       "      <td>1177</td>\n",
-       "      <td>485939.txt</td>\n",
+       "      <td>BRIEF HOSPITAL COURSE:  Ms. [**Known lastname ...</td>\n",
+       "      <td>Symptom_Section</td>\n",
+       "      <td>2618</td>\n",
+       "      <td>4272</td>\n",
+       "      <td>18305.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>edema</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>4629</td>\n",
-       "      <td>4634</td>\n",
-       "      <td>485939.txt</td>\n",
+       "      <td>HISTORY OF PRESENT ILLNESS:</td>\n",
+       "      <td>SectionHeader_HasSymptom</td>\n",
+       "      <td>128</td>\n",
+       "      <td>155</td>\n",
+       "      <td>18305.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>thrombosis</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>370</td>\n",
-       "      <td>380</td>\n",
-       "      <td>366026.txt</td>\n",
+       "      <td>BRIEF HOSPITAL COURSE:</td>\n",
+       "      <td>SectionHeader_HasSymptom</td>\n",
+       "      <td>2618</td>\n",
+       "      <td>2640</td>\n",
+       "      <td>18305.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>anemia</td>\n",
+       "      <td>polymyalgia rheumatica</td>\n",
        "      <td>Symptom</td>\n",
-       "      <td>433</td>\n",
-       "      <td>439</td>\n",
-       "      <td>366026.txt</td>\n",
+       "      <td>232</td>\n",
+       "      <td>254</td>\n",
+       "      <td>18305.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -170,81 +170,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>562</th>\n",
-       "      <td>left facial droop</td>\n",
+       "      <th>1214</th>\n",
+       "      <td>Face remains\\n   mildly swollen</td>\n",
        "      <td>Symptom</td>\n",
-       "      <td>4378</td>\n",
-       "      <td>4395</td>\n",
-       "      <td>3271.txt</td>\n",
+       "      <td>1119</td>\n",
+       "      <td>1149</td>\n",
+       "      <td>700799.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>563</th>\n",
-       "      <td>right gaze deviation</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>4418</td>\n",
-       "      <td>4438</td>\n",
-       "      <td>3271.txt</td>\n",
+       "      <th>1215</th>\n",
+       "      <td>Assessment:</td>\n",
+       "      <td>SectionHeader_HasSymptom</td>\n",
+       "      <td>715</td>\n",
+       "      <td>726</td>\n",
+       "      <td>700799.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>564</th>\n",
-       "      <td>difficulty crossing\\nmidline</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>4443</td>\n",
-       "      <td>4470</td>\n",
-       "      <td>3271.txt</td>\n",
+       "      <th>1216</th>\n",
+       "      <td>Assessment:</td>\n",
+       "      <td>SectionHeader_HasSymptom</td>\n",
+       "      <td>981</td>\n",
+       "      <td>992</td>\n",
+       "      <td>700799.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>565</th>\n",
-       "      <td>dysarthria</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>6075</td>\n",
-       "      <td>6085</td>\n",
-       "      <td>3271.txt</td>\n",
+       "      <th>1217</th>\n",
+       "      <td>Pt c/o [**6-2**] pain in neck with movement.</td>\n",
+       "      <td>Symptom_Section</td>\n",
+       "      <td>730</td>\n",
+       "      <td>774</td>\n",
+       "      <td>700799.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>566</th>\n",
-       "      <td>swallowing</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>6090</td>\n",
-       "      <td>6100</td>\n",
-       "      <td>3271.txt</td>\n",
+       "      <th>1218</th>\n",
+       "      <td>L eye red with periorbital edema. Pupil fixed ...</td>\n",
+       "      <td>Symptom_Section</td>\n",
+       "      <td>996</td>\n",
+       "      <td>1255</td>\n",
+       "      <td>700799.txt</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>567 rows × 5 columns</p>\n",
+       "<p>1219 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Span Text Concept Label  start loc  end loc  \\\n",
-       "0             respiratory failure       Symptom        103      122   \n",
-       "1                          sepsis       Symptom       1171     1177   \n",
-       "2                           edema       Symptom       4629     4634   \n",
-       "3                      thrombosis       Symptom        370      380   \n",
-       "4                          anemia       Symptom        433      439   \n",
-       "..                            ...           ...        ...      ...   \n",
-       "562             left facial droop       Symptom       4378     4395   \n",
-       "563          right gaze deviation       Symptom       4418     4438   \n",
-       "564  difficulty crossing\\nmidline       Symptom       4443     4470   \n",
-       "565                    dysarthria       Symptom       6075     6085   \n",
-       "566                    swallowing       Symptom       6090     6100   \n",
+       "                                              Span Text  \\\n",
+       "0     HISTORY OF PRESENT ILLNESS:  Ms. [**Known last...   \n",
+       "1     BRIEF HOSPITAL COURSE:  Ms. [**Known lastname ...   \n",
+       "2                           HISTORY OF PRESENT ILLNESS:   \n",
+       "3                                BRIEF HOSPITAL COURSE:   \n",
+       "4                                polymyalgia rheumatica   \n",
+       "...                                                 ...   \n",
+       "1214                    Face remains\\n   mildly swollen   \n",
+       "1215                                        Assessment:   \n",
+       "1216                                        Assessment:   \n",
+       "1217       Pt c/o [**6-2**] pain in neck with movement.   \n",
+       "1218  L eye red with periorbital edema. Pupil fixed ...   \n",
        "\n",
-       "       doc name  \n",
-       "0    485939.txt  \n",
-       "1    485939.txt  \n",
-       "2    485939.txt  \n",
-       "3    366026.txt  \n",
-       "4    366026.txt  \n",
-       "..          ...  \n",
-       "562    3271.txt  \n",
-       "563    3271.txt  \n",
-       "564    3271.txt  \n",
-       "565    3271.txt  \n",
-       "566    3271.txt  \n",
+       "                 Concept Label  start loc  end loc    doc name  \n",
+       "0              Symptom_Section        128     2616   18305.txt  \n",
+       "1              Symptom_Section       2618     4272   18305.txt  \n",
+       "2     SectionHeader_HasSymptom        128      155   18305.txt  \n",
+       "3     SectionHeader_HasSymptom       2618     2640   18305.txt  \n",
+       "4                      Symptom        232      254   18305.txt  \n",
+       "...                        ...        ...      ...         ...  \n",
+       "1214                   Symptom       1119     1149  700799.txt  \n",
+       "1215  SectionHeader_HasSymptom        715      726  700799.txt  \n",
+       "1216  SectionHeader_HasSymptom        981      992  700799.txt  \n",
+       "1217           Symptom_Section        730      774  700799.txt  \n",
+       "1218           Symptom_Section        996     1255  700799.txt  \n",
        "\n",
-       "[567 rows x 5 columns]"
+       "[1219 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,52 +268,30 @@
    "metadata": {},
    "source": [
     "## IAA Calculation\n",
-    "***Remark*** You need to install `quicksectx`."
+    "***Remark*** You need to install `quicksectx` (currently v0.3.1) if you don't already have it (I think it may be installed alongside medspacy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4db63ada-c285-443f-b0be-096d45bc7b87",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3620\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/_libs/index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/_libs/index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m john_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_pickle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./df_John.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m mengke_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_pickle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./df_Mengke.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[43mIAA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcorpus_agreement\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjohn_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmengke_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43mloose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/medspacy_annotations/notebooks/./Integrated_code/IAA_.py:157\u001b[0m, in \u001b[0;36mcorpus_agreement\u001b[0;34m(docs1, docs2, loose, labels, ent_or_span)\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;124;03m'''calculate f1 over an entire corpus of documents'''\u001b[39;00m\n\u001b[1;32m    155\u001b[0m corpus_tp, corpus_fp, corpus_fn \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m--> 157\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(\u001b[43mdocs1\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;129;01mis\u001b[39;00m spacy\u001b[38;5;241m.\u001b[39mtokens\u001b[38;5;241m.\u001b[39mdoc\u001b[38;5;241m.\u001b[39mDoc:\n\u001b[1;32m    158\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, doc1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(docs1):\n\u001b[1;32m    159\u001b[0m         tp,fp,fn \u001b[38;5;241m=\u001b[39m agreement(doc1, docs2[i],loose,labels,ent_or_span)\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3503\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3504\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3505\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3506\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3507\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3623\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3624\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3625\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3626\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3627\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3628\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from quicksectx import IntervalNode, IntervalTree, Interval #note that you need the quicksectx library\n",
     "import IAA_ as IAA\n",
-    "john_df = pd.read_pickle('./df_John.pkl')\n",
-    "mengke_df = pd.read_pickle('./df_Mengke.pkl')\n",
-    "IAA.corpus_agreement(john_df,mengke_df,loose=1)"
+    "\n",
+    "#Insert the two dataframes where you see 'df1' and 'df2' below\n",
+    "#By default this will look at labels and loose matching. 'df1' is considered the primary/golden annotation.\n",
+    "#Returns a dataframe with relevant calculations\n",
+    "IAA.corpus_agreement(df1,df2)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:python3.8]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python3.8-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -325,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
