Added comments concerning arguments for corpus_agreement

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -282,7 +282,10 @@
     "\n",
     "#Insert the two dataframes where you see 'df1' and 'df2' below\n",
     "#By default this will look at labels and loose matching. 'df1' is considered the primary/golden annotation.\n",
+    "#You can specify 'loose=0' to only look for exact matches (ie. spans only match if they have the exact same starting and ending character)\n",
+    "#You can specify 'labels=0' to not include labels as matching criteria.\n",
     "#Returns a dataframe with relevant calculations\n",
+    "\n",
     "IAA.corpus_agreement(df1,df2)\n"
    ]
   }
