--- a/notebooks/eHost_annotation2dataframe_newMedspacy-io.ipynb
+++ b/notebooks/eHost_annotation2dataframe_newMedspacy-io.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "da12c218-ebe5-4386-9acc-4d1361f502a9",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,10 @@
     "from spacy.lang.en import English\n",
     "from medspacy_io.reader import EhostDocReader\n",
     "from medspacy_io.reader import EhostDirReader\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "schema_file = '../tests/problem_data/config/projectschema.xml'\n",
+    "doc_dir = '../tests/problem_data/corpus/'\n",
+    "anno_dir = '../tests/problem_data/saved/'"
    ]
   },
   {
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a42baffe-30bc-4f17-9e85-ec6c00493b4c",
    "metadata": {},
    "outputs": [],
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "2982bd65-d86b-4b29-9150-2cf34c166b24",
    "metadata": {},
    "outputs": [
@@ -67,106 +70,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Symptom']\n",
-      "485939.txt\n",
-      "['Symptom', 'SectionHeader_HasSymptom', 'Symptom_Section']\n",
-      "366026.txt\n",
       "['SectionHeader_HasSymptom', 'Symptom_Section', 'Symptom']\n",
-      "5585.txt\n",
-      "['Symptom']\n",
-      "669731.txt\n",
-      "['SectionHeader_HasSymptom', 'Symptom']\n",
-      "33200.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "36609.txt\n",
-      "['Symptom']\n",
-      "335643.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "52374.txt\n",
-      "['Symptom']\n",
-      "38580.txt\n",
-      "['Doc_reviewed_no_symptoms']\n",
-      "601884.txt\n",
-      "['SectionHeader_HasSymptom', 'Symptom']\n",
-      "38757.txt\n",
-      "['Symptom']\n",
-      "416614.txt\n",
-      "['Symptom', 'SectionHeader_HasSymptom']\n",
-      "45725.txt\n",
-      "[]\n",
-      "56773.txt\n",
-      "['SectionHeader_HasSymptom', 'Symptom_Section', 'Symptom']\n",
-      "19070.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "628045.txt\n",
-      "['SectionHeader_HasSymptom', 'Symptom', 'Symptom_Section']\n",
-      "45509.txt\n",
-      "['Symptom']\n",
-      "527735.txt\n",
-      "[]\n",
-      "439912.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "457012.txt\n",
-      "['Symptom']\n",
-      "595179.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "575514.txt\n",
-      "['SectionHeader_HasSymptom', 'Symptom', 'Symptom_Section']\n",
-      "28056.txt\n",
-      "['Symptom']\n",
-      "655523.txt\n",
-      "['Doc_reviewed_no_symptoms', 'Symptom']\n",
-      "537108.txt\n",
-      "['Symptom']\n",
-      "33137.txt\n",
-      "['Symptom']\n",
-      "330814.txt\n",
-      "['SectionHeader_HasSymptom', 'Symptom', 'Symptom_Section']\n",
-      "18826.txt\n",
-      "['Doc_reviewed_no_symptoms']\n",
-      "700062.txt\n",
-      "['Symptom']\n",
-      "26272.txt\n",
-      "[]\n",
-      "321062.txt\n",
-      "['Symptom']\n",
-      "584041.txt\n",
-      "['Symptom']\n",
-      "369557.txt\n",
-      "['Symptom']\n",
-      "679566.txt\n",
-      "['Symptom']\n",
-      "593885.txt\n",
-      "['Symptom']\n",
-      "379.txt\n",
-      "['Symptom']\n",
-      "489228.txt\n",
-      "['Symptom', 'SectionHeader_HasSymptom', 'Symptom_Section']\n",
-      "24881.txt\n",
-      "['Symptom']\n",
-      "377554.txt\n",
-      "['Doc_reviewed_no_symptoms', 'Symptom']\n",
-      "700799.txt\n",
-      "['SectionHeader_HasSymptom', 'Symptom_Section', 'Symptom']\n",
-      "26388.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "330335.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "18305.txt\n",
-      "['Symptom']\n",
-      "375911.txt\n",
-      "['Symptom']\n",
-      "345622.txt\n",
-      "['Symptom']\n",
-      "346854.txt\n",
-      "['Symptom']\n",
-      "536291.txt\n",
-      "['Symptom']\n",
-      "456788.txt\n",
-      "['Symptom', 'Symptom_Section']\n",
-      "5749.txt\n",
-      "['Symptom']\n",
-      "3271.txt\n"
+      "problem_doc.txt\n"
      ]
     }
    ],
@@ -190,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "f9ecb751-7caf-48cd-a0ff-5e5a0f363bc9",
    "metadata": {},
    "outputs": [
@@ -225,128 +130,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>respiratory failure</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>103</td>\n",
-       "      <td>122</td>\n",
-       "      <td>485939.txt</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>SectionHeader_HasSymptom</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>problem_doc.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>sepsis</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>1171</td>\n",
-       "      <td>1177</td>\n",
-       "      <td>485939.txt</td>\n",
+       "      <td>Veteran states that he is nauseous, provider i...</td>\n",
+       "      <td>Symptom_Section</td>\n",
+       "      <td>50</td>\n",
+       "      <td>105</td>\n",
+       "      <td>problem_doc.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>edema</td>\n",
+       "      <td>nauseous</td>\n",
        "      <td>Symptom</td>\n",
-       "      <td>4629</td>\n",
-       "      <td>4634</td>\n",
-       "      <td>485939.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>thrombosis</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>370</td>\n",
-       "      <td>380</td>\n",
-       "      <td>366026.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>anemia</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>433</td>\n",
-       "      <td>439</td>\n",
-       "      <td>366026.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>562</th>\n",
-       "      <td>left facial droop</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>4378</td>\n",
-       "      <td>4395</td>\n",
-       "      <td>3271.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>563</th>\n",
-       "      <td>right gaze deviation</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>4418</td>\n",
-       "      <td>4438</td>\n",
-       "      <td>3271.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>564</th>\n",
-       "      <td>difficulty crossing\\nmidline</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>4443</td>\n",
-       "      <td>4470</td>\n",
-       "      <td>3271.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>565</th>\n",
-       "      <td>dysarthria</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>6075</td>\n",
-       "      <td>6085</td>\n",
-       "      <td>3271.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>566</th>\n",
-       "      <td>swallowing</td>\n",
-       "      <td>Symptom</td>\n",
-       "      <td>6090</td>\n",
-       "      <td>6100</td>\n",
-       "      <td>3271.txt</td>\n",
+       "      <td>76</td>\n",
+       "      <td>84</td>\n",
+       "      <td>problem_doc.txt</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>567 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Span Text Concept Label  start loc  end loc  \\\n",
-       "0             respiratory failure       Symptom        103      122   \n",
-       "1                          sepsis       Symptom       1171     1177   \n",
-       "2                           edema       Symptom       4629     4634   \n",
-       "3                      thrombosis       Symptom        370      380   \n",
-       "4                          anemia       Symptom        433      439   \n",
-       "..                            ...           ...        ...      ...   \n",
-       "562             left facial droop       Symptom       4378     4395   \n",
-       "563          right gaze deviation       Symptom       4418     4438   \n",
-       "564  difficulty crossing\\nmidline       Symptom       4443     4470   \n",
-       "565                    dysarthria       Symptom       6075     6085   \n",
-       "566                    swallowing       Symptom       6090     6100   \n",
+       "                                           Span Text  \\\n",
+       "0                                               2010   \n",
+       "1  Veteran states that he is nauseous, provider i...   \n",
+       "2                                           nauseous   \n",
        "\n",
-       "       doc name  \n",
-       "0    485939.txt  \n",
-       "1    485939.txt  \n",
-       "2    485939.txt  \n",
-       "3    366026.txt  \n",
-       "4    366026.txt  \n",
-       "..          ...  \n",
-       "562    3271.txt  \n",
-       "563    3271.txt  \n",
-       "564    3271.txt  \n",
-       "565    3271.txt  \n",
-       "566    3271.txt  \n",
-       "\n",
-       "[567 rows x 5 columns]"
+       "              Concept Label  start loc  end loc         doc name  \n",
+       "0  SectionHeader_HasSymptom         45       49  problem_doc.txt  \n",
+       "1           Symptom_Section         50      105  problem_doc.txt  \n",
+       "2                   Symptom         76       84  problem_doc.txt  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "b9ad8a1a-d767-4e91-82bc-5b9ea586f74a",
    "metadata": {},
    "outputs": [
@@ -397,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c48a13d1-8fee-49bb-bf21-56c0a12f396b",
    "metadata": {},
    "outputs": [],
@@ -420,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9d928ac0-01e6-412d-8500-8213813a48c4",
    "metadata": {},
    "outputs": [
@@ -576,7 +398,7 @@
        "[567 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
