--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "92b742f0-643a-4976-9bb8-65612ad253bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema_file = 'C:/Users/johna/Desktop/work forms filled/Symptoms/Symptoms/config/projectschema.xml'\n",
-    "doc_dir = '/Users/johna/Desktop/work forms filled/Symptoms/Symptoms/corpus/'\n",
-    "anno_dir = '/Users/johna/Desktop/work forms filled/Symptoms/Symptoms/saved/'"
+    "schema_file = '../mimic_annotations/testEhostReaderData/config/projectschema.xml'#'C:/Users/johna/Desktop/work forms filled/Symptoms/Symptoms/config/projectschema.xml'\n",
+    "doc_dir = '../mimic_annotations/testEhostReaderData/corpus/'\n",
+    "anno_dir = '../mimic_annotations/testEhostReaderData/saved/'"
    ]
   },
   {
@@ -56,26 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9c188183-d20e-4df1-941c-da177a37a7c0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 ['18305.txt', '18826.txt', '19070.txt', '24881.txt', '26272.txt', '26388.txt', '28056.txt', '321062.txt', '3271.txt', '330335.txt', '330814.txt', '33137.txt', '33200.txt', '335643.txt', '345622.txt', '346854.txt', '366026.txt', '36609.txt', '369557.txt', '375911.txt', '377554.txt', '379.txt', '38580.txt', '38757.txt', '416614.txt', '439912.txt', '45509.txt', '456788.txt', '457012.txt', '45725.txt', '485939.txt', '489228.txt', '52374.txt', '527735.txt', '536291.txt', '537108.txt', '5585.txt', '56773.txt', '5749.txt', '575514.txt', '584041.txt', '593885.txt', '595179.txt', '601884.txt', '628045.txt', '655523.txt', '669731.txt', '679566.txt', '700062.txt', '700799.txt']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ereader = EhostDocReader(nlp=English(), schema_file=schema_file,support_overlap=True)\n",
-    "doc_list = os.listdir(doc_dir)\n",
-    "print(len(doc_list),doc_list)\n",
-    "docs = []\n",
-    "for fn in doc_list:\n",
-    "    doc = ereader.read(doc_dir+fn)\n",
-    "    docs.append(doc)"
+    "docs = eHost2df.eHost_dir_reader_overlap(schema_file,doc_dir)"
    ]
   },
   {
@@ -88,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4c400ec5-2e1d-42b4-bea2-e46e806d9de2",
    "metadata": {},
    "outputs": [
@@ -123,43 +109,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>HISTORY OF PRESENT ILLNESS:  Ms. [**Known last...</td>\n",
-       "      <td>Symptom_Section</td>\n",
-       "      <td>128</td>\n",
-       "      <td>2616</td>\n",
-       "      <td>18305.txt</td>\n",
+       "      <td>respiratory failure</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>103</td>\n",
+       "      <td>122</td>\n",
+       "      <td>485939.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>BRIEF HOSPITAL COURSE:  Ms. [**Known lastname ...</td>\n",
-       "      <td>Symptom_Section</td>\n",
-       "      <td>2618</td>\n",
-       "      <td>4272</td>\n",
-       "      <td>18305.txt</td>\n",
+       "      <td>sepsis</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>1171</td>\n",
+       "      <td>1177</td>\n",
+       "      <td>485939.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>HISTORY OF PRESENT ILLNESS:</td>\n",
-       "      <td>SectionHeader_HasSymptom</td>\n",
-       "      <td>128</td>\n",
-       "      <td>155</td>\n",
-       "      <td>18305.txt</td>\n",
+       "      <td>edema</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>4629</td>\n",
+       "      <td>4634</td>\n",
+       "      <td>485939.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>BRIEF HOSPITAL COURSE:</td>\n",
-       "      <td>SectionHeader_HasSymptom</td>\n",
-       "      <td>2618</td>\n",
-       "      <td>2640</td>\n",
-       "      <td>18305.txt</td>\n",
+       "      <td>thrombosis</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>370</td>\n",
+       "      <td>380</td>\n",
+       "      <td>366026.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>polymyalgia rheumatica</td>\n",
+       "      <td>anemia</td>\n",
        "      <td>Symptom</td>\n",
-       "      <td>232</td>\n",
-       "      <td>254</td>\n",
-       "      <td>18305.txt</td>\n",
+       "      <td>433</td>\n",
+       "      <td>439</td>\n",
+       "      <td>366026.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -170,87 +156,87 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1214</th>\n",
-       "      <td>Face remains\\n   mildly swollen</td>\n",
+       "      <th>562</th>\n",
+       "      <td>left facial droop</td>\n",
        "      <td>Symptom</td>\n",
-       "      <td>1119</td>\n",
-       "      <td>1149</td>\n",
-       "      <td>700799.txt</td>\n",
+       "      <td>4378</td>\n",
+       "      <td>4395</td>\n",
+       "      <td>3271.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1215</th>\n",
-       "      <td>Assessment:</td>\n",
-       "      <td>SectionHeader_HasSymptom</td>\n",
-       "      <td>715</td>\n",
-       "      <td>726</td>\n",
-       "      <td>700799.txt</td>\n",
+       "      <th>563</th>\n",
+       "      <td>right gaze deviation</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>4418</td>\n",
+       "      <td>4438</td>\n",
+       "      <td>3271.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1216</th>\n",
-       "      <td>Assessment:</td>\n",
-       "      <td>SectionHeader_HasSymptom</td>\n",
-       "      <td>981</td>\n",
-       "      <td>992</td>\n",
-       "      <td>700799.txt</td>\n",
+       "      <th>564</th>\n",
+       "      <td>difficulty crossing\\nmidline</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>4443</td>\n",
+       "      <td>4470</td>\n",
+       "      <td>3271.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1217</th>\n",
-       "      <td>Pt c/o [**6-2**] pain in neck with movement.</td>\n",
-       "      <td>Symptom_Section</td>\n",
-       "      <td>730</td>\n",
-       "      <td>774</td>\n",
-       "      <td>700799.txt</td>\n",
+       "      <th>565</th>\n",
+       "      <td>dysarthria</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>6075</td>\n",
+       "      <td>6085</td>\n",
+       "      <td>3271.txt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1218</th>\n",
-       "      <td>L eye red with periorbital edema. Pupil fixed ...</td>\n",
-       "      <td>Symptom_Section</td>\n",
-       "      <td>996</td>\n",
-       "      <td>1255</td>\n",
-       "      <td>700799.txt</td>\n",
+       "      <th>566</th>\n",
+       "      <td>swallowing</td>\n",
+       "      <td>Symptom</td>\n",
+       "      <td>6090</td>\n",
+       "      <td>6100</td>\n",
+       "      <td>3271.txt</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1219 rows × 5 columns</p>\n",
+       "<p>567 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              Span Text  \\\n",
-       "0     HISTORY OF PRESENT ILLNESS:  Ms. [**Known last...   \n",
-       "1     BRIEF HOSPITAL COURSE:  Ms. [**Known lastname ...   \n",
-       "2                           HISTORY OF PRESENT ILLNESS:   \n",
-       "3                                BRIEF HOSPITAL COURSE:   \n",
-       "4                                polymyalgia rheumatica   \n",
-       "...                                                 ...   \n",
-       "1214                    Face remains\\n   mildly swollen   \n",
-       "1215                                        Assessment:   \n",
-       "1216                                        Assessment:   \n",
-       "1217       Pt c/o [**6-2**] pain in neck with movement.   \n",
-       "1218  L eye red with periorbital edema. Pupil fixed ...   \n",
+       "                        Span Text Concept Label  start loc  end loc  \\\n",
+       "0             respiratory failure       Symptom        103      122   \n",
+       "1                          sepsis       Symptom       1171     1177   \n",
+       "2                           edema       Symptom       4629     4634   \n",
+       "3                      thrombosis       Symptom        370      380   \n",
+       "4                          anemia       Symptom        433      439   \n",
+       "..                            ...           ...        ...      ...   \n",
+       "562             left facial droop       Symptom       4378     4395   \n",
+       "563          right gaze deviation       Symptom       4418     4438   \n",
+       "564  difficulty crossing\\nmidline       Symptom       4443     4470   \n",
+       "565                    dysarthria       Symptom       6075     6085   \n",
+       "566                    swallowing       Symptom       6090     6100   \n",
        "\n",
-       "                 Concept Label  start loc  end loc    doc name  \n",
-       "0              Symptom_Section        128     2616   18305.txt  \n",
-       "1              Symptom_Section       2618     4272   18305.txt  \n",
-       "2     SectionHeader_HasSymptom        128      155   18305.txt  \n",
-       "3     SectionHeader_HasSymptom       2618     2640   18305.txt  \n",
-       "4                      Symptom        232      254   18305.txt  \n",
-       "...                        ...        ...      ...         ...  \n",
-       "1214                   Symptom       1119     1149  700799.txt  \n",
-       "1215  SectionHeader_HasSymptom        715      726  700799.txt  \n",
-       "1216  SectionHeader_HasSymptom        981      992  700799.txt  \n",
-       "1217           Symptom_Section        730      774  700799.txt  \n",
-       "1218           Symptom_Section        996     1255  700799.txt  \n",
+       "       doc name  \n",
+       "0    485939.txt  \n",
+       "1    485939.txt  \n",
+       "2    485939.txt  \n",
+       "3    366026.txt  \n",
+       "4    366026.txt  \n",
+       "..          ...  \n",
+       "562    3271.txt  \n",
+       "563    3271.txt  \n",
+       "564    3271.txt  \n",
+       "565    3271.txt  \n",
+       "566    3271.txt  \n",
        "\n",
-       "[1219 rows x 5 columns]"
+       "[567 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = eHost2df.df_builder_overlapSpan(docs,doc_list)\n",
+    "df = eHost2df.df_builder_overlapSpan(docs)\n",
     "df"
    ]
   },
@@ -273,12 +259,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4db63ada-c285-443f-b0be-096d45bc7b87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IAA</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>True Positives</th>\n",
+       "      <th>False Positives</th>\n",
+       "      <th>False Negative</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.424859</td>\n",
+       "      <td>0.681159</td>\n",
+       "      <td>0.308703</td>\n",
+       "      <td>376</td>\n",
+       "      <td>176</td>\n",
+       "      <td>842</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        IAA    Recall  Precision  True Positives  False Positives  \\\n",
+       "0  0.424859  0.681159   0.308703             376              176   \n",
+       "\n",
+       "   False Negative  \n",
+       "0             842  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import IAA_ as IAA\n",
+    "df1 = pd.read_pickle('./df_John.pkl')\n",
+    "df2 = pd.read_pickle('./df_Mengke.pkl')\n",
     "\n",
     "#Insert the two dataframes where you see 'df1' and 'df2' below\n",
     "#By default this will look at labels and loose matching. 'df1' is considered the primary/golden annotation.\n",
@@ -292,9 +336,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:python3.8]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python3.8-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -306,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
